examples/good/in/04-01-print.see
void main() {
    printStr("Hello Mum"); // Hello Mum
    printInt(21);          // 21
    printBool(true);       // true

    printStr(toStr(21));
    printInt(toInt("15"));

    return;
}
