examples/bad/06-01-no-return.see
int funny() {
    printStr("Hi");
    // return 0;
}

void main() {
    funny();

    return;
}
